--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,9 +49,14 @@ html, body {
 @layer base {
   * {
     @apply border-border;
+    box-sizing: border-box;
+	  -webkit-font-smoothing: antialiased;
+	  text-rendering: optimizeLegibility;
+	  scroll-behavior: smooth;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply text-foreground;
+    background-color: #1e1e1e;
   }
 }
 
