--- a/src/components/ui/card-nav.css
+++ b/src/components/ui/card-nav.css
@@ -32,7 +32,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 0.45rem 0.55rem 1.1rem;
+  padding: 0.5rem 1.1rem;
   z-index: 2;
 }
 
@@ -73,26 +73,6 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-}
-
-.logo-container .logo {
-  height: 28px;
-}
-
-.card-nav-cta-button {
-  background-color: #111;
-  color: white;
-  border: none;
-  border-radius: calc(0.75rem - 0.35rem);
-  padding: 0 1rem;
-  height: 100%;
-  font-weight: 500;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.card-nav-cta-button:hover {
-  background-color: #333;
 }
 
 .card-nav-content {
