--- a/src/components/ui/chroma-grid.css
+++ b/src/components/ui/chroma-grid.css
@@ -34,7 +34,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 100%;
   aspect-ratio: 4 / 3;
   min-height: 200px;
@@ -43,11 +43,11 @@
   border: 1px solid #333;
   transition: border-color 0.3s ease;
   background: var(--card-gradient);
-  padding: 0.75rem 1rem;
+  padding: 1rem;
 
   --mouse-x: 50%;
   --mouse-y: 50%;
-  --spotlight-color: rgba(255, 255, 255, 0.3);
+  --spotlight-color: rgba(254, 73, 0, 0.3);
 }
 
 .chroma-card:hover {
@@ -79,29 +79,6 @@
   justify-content: center;
   z-index: 1;
   pointer-events: none;
-  
-  mask-image: radial-gradient(
-    circle var(--r, 150px) at var(--x, 50%) var(--y, 50%),
-    white 0%,
-    white 15%,
-    rgba(255, 255, 255, 0.90) 30%,
-    rgba(255, 255, 255, 0.78) 45%,
-    rgba(255, 255, 255, 0.65) 60%,
-    rgba(255, 255, 255, 0.50) 75%,
-    rgba(255, 255, 255, 0.32) 88%,
-    transparent 100%
-  );
-  -webkit-mask-image: radial-gradient(
-    circle var(--r, 150px) at var(--x, 50%) var(--y, 50%),
-    white 0%,
-    white 15%,
-    rgba(255, 255, 255, 0.90) 30%,
-    rgba(255, 255, 255, 0.78) 45%,
-    rgba(255, 255, 255, 0.65) 60%,
-    rgba(255, 255, 255, 0.50) 75%,
-    rgba(255, 255, 255, 0.32) 88%,
-    transparent 100%
-  );
 }
 
 
@@ -115,16 +92,23 @@
   max-width: 64px;
   max-height: 64px;
   color: white;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
+
+.chroma-card:hover .chroma-icon-wrapper svg,
+.chroma-card:hover .chroma-icon-wrapper img {
+    opacity: 0.5;
+}
+
 
 .chroma-info {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   color: #fff;
   font-family: system-ui, sans-serif;
   display: flex;
   flex-direction: column;
-  margin-top: auto;
 }
 
 .chroma-info .name {
